<?xml version="1.0"?>
<package format="2">
  <name>octomap_generator</name>
  <version>1.0.0</version>
  <description>Octomap generator</description>

  <maintainer email="floatlazer@gmail.com">Xuan Zhang</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>octomap</build_depend>

  <build_depend>octomap_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>octomap</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
   <exec_depend>libpcl-all</exec_depend>

</package>
