<?xml version="1.0"?>
<package format="2">
  <name>semantic_cloud</name>
  <version>1.0.0</version>
  <description>Semantic segmantation using convolutional neural network</description>

  <maintainer email="floatlazer@gmail.com">Xuan Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

 <exec_depend>roscpp</exec_depend>
 <exec_depend>rospy</exec_depend>
 <exec_depend>sensor_msgs</exec_depend>

</package>
