<?xml version="1.0"?>
<package format="2">
  <name>semantic_slam</name>
  <version>0.0.0</version>
  <description>The semantic_slam package</description>

  <maintainer email="floatlazer@gmail.com">xuanzhang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
