<?xml version="1.0"?>
<package format="2">
  <name>orb_slam2</name>
  <version>0.0.0</version>
  <description>ORB_SLAM2</description>
  <author>Raul Mur-Artal</author>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend> 
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
